# wrava

./: .gitignore  README.md  main_duck.py  pyproject.toml
.github/workflows/: setup_app.yml  update-duck-data.yml
